# SurgeInk

./: .dockerignore  .env.example  .gitignore  README.md  SURGEINK_SPEC.md  docker-compose.yml  package.json  vite.config.js
scripts/: capture-chicago.mjs  capture-new-orleans.mjs  capture-showcase.mjs
server/: Dockerfile  README.md  pyproject.toml  requirements.txt
server/surgeink/: config.py  main.py
server/surgeink/api/: disasters.py  fema.py  forecast.py  geocode.py  interpret.py  layers.py  predict.py  risk.py  router.py  tiles.py
server/surgeink/cache/: redis_cache.py
server/surgeink/data/: openmeteo.py
server/surgeink/models/: schemas.py
src/core/: AppProviders.tsx  config.ts  services.ts
src/features/disaster/application/: useDisasterEvents.ts  useDisasterOverlay.ts
src/features/disaster/domain/: ports.ts  types.ts
src/features/disaster/infrastructure/: burnMarks.ts  eonetAdapter.ts
src/features/disaster/ui/: DisasterContext.tsx  DisasterMapOverlay.tsx  DisasterSection.tsx
src/features/export/application/: useExport.ts
src/features/flood/application/: useDischarge.ts  useFemaOverlay.ts  useFemaZoneInfo.ts  useFloodVectorOverlay.ts
src/features/flood/domain/: floodColors.ts  ports.ts  types.ts
src/features/flood/infrastructure/: constants.ts  femaAdapter.ts  femaGeoJsonAdapter.ts  surgeinkApiAdapter.ts
src/features/flood/ui/: DischargeSparkline.tsx  FloodContext.tsx  (+3 more)
src/shared/ui/: DesktopNavBar.tsx  GeneralHeader.tsx  Icons.tsx  MobileNavBar.tsx
src/styles/: desktop.css  flood.css  forms.css  index.css  mobile.css
(+6 files in other folders)
